# PaperTrail

./: .gitattributes  .gitignore  BUGS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  GIT_WORKFLOW.md  README.md  build_app.sh  bump_version.sh  install.sh  myarxiv.spec  pyproject.toml  requirements.txt  run.sh  setup.py  test_phase2.py
.githooks/: commit-msg  pre-commit  pre-push  setup.sh
src/: PaperTrail.spec  main.py  models.py  myArXiv.spec
src/api/: arxiv_client.py
src/assets/: AppIcon.icns
src/database/: connection.py  migration_manager.py  repositories.py
src/database/migrations/: 001_initial_schema.sql  003_add_local_source_path.sql  003_fix_fts5_content_sync.sql  004_add_origin_column.sql  __init__.py  add_local_source_path.py  add_origin_column.py  baseline_schema.py  fix_fts5_group_concat_order.py  fix_fts_author_delete_guard.py  fix_notes_fts_triggers.py  fts5_contentless.py
src/services/: config_service.py  fetch_service.py  paper_service.py  pdf_service.py  source_service.py
src/ui/: main_window.py  theme.py
src/ui/dialogs/: __init__.py  arxiv_search_results_dialog.py  change_library_dialog.py  fetch_papers_dialog.py  merge_conflict_dialog.py  pdf_action_dialog.py  preferences_dialog.py
src/ui/widgets/: __init__.py  context_panel_widget.py  (+6 more)
src/utils/: async_utils.py  download_utils.py  filename_utils.py  library_migration.py  platform_utils.py
tests/: conftest.py  test_database.py  test_error_handling.py  test_library_migration.py  test_link_label.py  test_migrations.py  test_regression.py  test_services.py  test_utils.py
(+3 files in other folders)
