[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papertrail"
version = "0.6.0"
description = "Desktop application for managing and organizing arXiv papers"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
dependencies = [
    "PySide6>=6.6.0",
    "arxiv>=2.1.0",
    "PyMuPDF>=1.23.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
